# validate-urls

./: README.md  pyproject.toml  url.py
.github/workflows/: python_dist.yml
urivalidator/: __init__.py  cli.py
