[build-system]
requires = ["hatchling>=1.8.0"]
build-backend = "hatchling.build"

[project]
name = "validate-urls"
dynamic = ["version"]
description = "Validate URIs"
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
authors = [
    { name = "Marshal Miller", email = "marshal@rottingresearch.org" },
]
keywords = [
    "pdf",
    "reference",
    "linkrot",
    "link",
    "rot",
    "broken",
    "uri",
    "url",
    "validator",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "License :: OSI Approved",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries",
    "Topic :: Utilities",
]
dependencies = [
    "pdfminer.six==20221105",
    "chardet==5.2.0",
    "lxml==4.9.3",
]

[project.optional-dependencies]
dev = [
    "black==23.10.0",
    "coverage==7.3.0",
    "flake8==6.1.0",
    "mccabe<=0.7.0",
    "mypy==1.5.1",
    "pylint==2.17.5",
    "pytest==7.4.0",
    "build==0.10.0",
    "mega.py==1.0.8",
]
test = [
    "pytest==7.4.0",
    "mega.py==1.0.8",
]

[project.urls]
Homepage = "https://github.com/rottingresearch/urivalidator"

[tool.hatch.version]
path = "urivalidator/__init__.py"

[tool.hatch.build.targets.sdist]
include = [
    "/urivalidator",
]

[tool.hatch.build.targets.wheel]
packages = [
    "/urivalidator",
]

[project.scripts]
urivalidator= "urivalidator.cli:main"
